<resources>
    <string name="app_name">RelativeLayoutApplication</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="email_view_text">Email Text View</string>
    <string name="email_view_edit">Email Edit View</string>
    <string name="button_login">Login</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_about">About</string>
</resources>
