<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/email_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:text="@string/email_view_text"/>

    <EditText
        android:id="@+id/email_edit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/email_view"
        android:hint="@string/email_view_edit"
        />
    <Button
        android:id="@+id/btn_login"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/email_edit"
        android:text="@string/button_login"
        />
    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_edit"
        android:layout_toRightOf="@+id/btn_login"
        android:text="@string/button_cancel"
        android:gravity="left|center_vertical"
        android:layout_marginLeft="50dp"
        />

    <Button
        android:id="@+id/btn_about"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/button_about"
        android:onClick="buttonAboutClicked"
        />
</RelativeLayout>
